# chatbot-rag

./: .gitignore  README.md  pyproject.toml
src/: app.py  rag_logic.py
